# pico-555-power-control

./: .gitignore  555_basics.kicad_sch  README.md
firmware/: CMakeLists.txt  power_control.c
pcb/pico_555/: pico_555.kicad_prl  pico_555.kicad_pro  pico_555.kicad_sch  sym-lib-table
